# serial-mcp

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
serial_mcp/: server.py  session.py
