[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "serial-mcp"
version = "0.3.0"
description = "MCP server for serial device communication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Alex Gompper" },
]
keywords = ["mcp", "serial", "uart", "embedded", "iot", "pyserial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Hardware",
    "Topic :: Communications",
]
dependencies = [
    "mcp>=1.0.0",
    "pyserial>=3.5",
]

[project.urls]
Homepage = "https://github.com/alxgmpr/serial-mcp"
Repository = "https://github.com/alxgmpr/serial-mcp"
Issues = "https://github.com/alxgmpr/serial-mcp/issues"

[project.scripts]
serial-mcp = "serial_mcp.server:main"
